8237913: G1CollectedHeap::heap_region_containing shouldn't be a template

Reviewed-by: kbarrett, sangheki